# brain

./: AGENTS.md  AGENT_INSTRUCTIONS.md  CHANGELOG.md  ISA.md  Makefile  NEWSLETTER.md  PROPOSAL-pull-config-wedge.md  PR_MAINTAINER_GUIDELINES.md  README.md  RELEASING.md  default.nix  go.mod  go.sum  packages.nix
.claude-plugin/: marketplace.json
cmd/bd/: ado.go  assign.go  audit.go  auto_render_embedded_test.go  autocommit_embedded_test.go  backup.go  backup_dolt.go  backup_restore.go  batch.go  blocked_proxied_integration_test.go  bootstrap.go  brain.go  brain_config.go  brain_description_guard_test.go  brain_feature_request.go  brain_feature_request_test.go  brain_link.go  brain_new.go  brain_new_isa_embedded_test.go  brain_promote.go  brain_recast.go  brain_related.go  brain_search_federated.go  brain_search_federated_test.go  brain_stores.go  brain_stores_create_test.go  brain_stores_test.go  brain_test.go  brain_transfer.go  branch.go  change_events.go  change_events_test.go  children.go  cleanup.go  close.go  close_proxied_integration_test.go  close_proxied_server.go  comment.go  comments.go  compact.go  (+242 more)
divergence/: 0001-brain-repo-genesis.md  0002-first-tranche-decisions.md  0003-modularity-first.md  0004-brain-verb-seam-and-parent.md  0005-brain-vs-bd-vocabulary-doc.md  0006-brain-primitives-reframe.md  0007-brain-new.md  0008-brain-link.md  0009-brain-related.md  0010-brain-recast.md  0011-first-tranche-isc-marks.md  0012-exfiltration-decorator.md  0014-isa-show-json-drops-progress.md  0015-create-missing-slug-flag.md  0016-isa-by-slug-json-returns-text.md  0017-dep-add-silent-orphan-cross-store.md  README.md
docs/: AGENT_SIGNING.md  CLI_REFERENCE.md  COMMUNITY_TOOLS.md  DOC_INVENTORY.md  INSTALLING.md  RECOVERY.md  SETUP.md
docs/adr/: 0002-init-safety-invariants.md
docs/brain/: BRAIN_VS_BD.md  README.md  WHAT_IS_BRAIN.md
examples/compaction/: README.md
integrations/beads-mcp/: README.md  pyproject.toml
integrations/beads-mcp/src/beads_mcp/: __init__.py
integrations/beads-mcp/tests/: test_bd_client_integration.py  test_compaction_config.py
internal/beads/: beads.go  beads_inherited_artifacts_test.go  context.go  context_test.go
internal/compact/: compactor.go  compactor_unit_test.go
internal/config/: config.go  (+2 more)
npm-package/: package.json
release-gates/: be-i9e2-gate.md
scripts/: README.md  check-beads-upstream.sh  check-cli-docs-drift.sh  check-doc-flags.sh  check-docs-version.sh  docs.md  gen-winres.sh  generate-cli-docs.sh  gh-body-lint  snapshot-release-docs.sh  update-versions.sh
(+330 files in other folders)
